[package]
name = "spicat"
description = "Full-duplex SPI transactions from the command line"
version = "0.1.0"
license = "BSD-2-Clause"
repository = "https://github.com/fusion-engineering/spicat"
authors = [
	"Fusion Engineering",
	"Maarten de Vries <maarten@de-vri.es>"
]
edition = "2018"

[dependencies]
spidev = "0.4"
structopt = "0.2.18"
libc = "0.2.60"

[badges]
travis-ci = { repository = "fusion-engineering/spicat", branch = "master" }
