[package]
name = "spicat"
description = "Full-duplex SPI transactions from the command line"
version = "0.1.5"
license = "BSD-2-Clause"
repository = "https://github.com/fusion-engineering/spicat"
authors = [
	"Fusion Engineering",
	"Maarten de Vries <maarten@de-vri.es>"
]
edition = "2018"
keywords = ["spi", "spidev"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
spidev = "0.6"
libc = "0.2.149"
clap = { version = "4.4.6", features = ["derive"] }

[badges]
travis-ci = { repository = "fusion-engineering/spicat", branch = "master" }
